Corrijo y agrego soluciones de PyE

--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 3.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 3.lyx
@@ -81577,7 +81577,7 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-\begin_inset Formula $S=\left\{ \left(x,y\right)/x\in\left\{ 1,2,3,4,5,6\right\} \right\} $
+\begin_inset Formula $S=\left\{ \left(x,y\right)/x,y\in\left\{ 1,2,3,4,5,6\right\} \right\} $
 \end_inset
 
 .
@@ -82407,15 +82407,29 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $\#S=16$
+\end_inset
+
+.
+ 
+\begin_inset Formula $P=\frac{8+4+2+1}{16}=\frac{15}{16}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P=\frac{15}{16}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P=\frac{3+2+1}{16}=\frac{6}{16}$
+\end_inset
+
+.
 \end_layout
 
 \end_deeper
@@ -82438,11 +82452,22 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $\#S=6^{5}$
+\end_inset
+
+.
+ 
+\begin_inset Formula $P=\frac{1}{6^{5}}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P=\frac{5}{6^{5}}$
+\end_inset
+
+.
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -82609,6 +82634,61 @@ sea chica y use anteojos?
 \begin_layout Enumerate
 Nos dicen que el alumno elegido resultó una chica, ¿cuál es la probabilidad
  de que use anteojos? 
+\end_layout
+
+\begin_layout Paragraph
+Soluciones
+\end_layout
+
+\begin_layout Enumerate
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{600}{1000}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{400}{1000}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{300}{1000}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{700}{1000}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{113}{1000}$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+\begin_inset Formula $P=\frac{113}{400/1000}$
+\end_inset
+
+.
 \end_layout
 
 \end_deeper
